--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "metadata": {
     "tags": []
    },
@@ -532,7 +532,7 @@
     "                        color: white; border-radius: 10px; margin-bottom: 20px;'>\n",
     "                <h1 style='margin: 0; font-size: 28px;'>Google AlphaEarth Foundations App for Land Cover Classification</h1>\n",
     "                <p style='margin: 10px 0 0 0; font-size: 16px; font-style: italic; opacity: 0.9;'>\n",
-    "                     Will you still need me, will you still feed me, when I'm Sixty-four?\n",
+    "                     🎵🎶 Will you still need me, will you still feed me, when I'm Sixty-four? 🎵🎶\n",
     "                </p>\n",
     "            </div>\n",
     "            \"\"\"\n",
@@ -552,15 +552,7 @@
     "                    and to identify which embeddings are most important for specific pairwise classification tasks.\n",
     "                </p>\n",
     "                \n",
-    "                <div style='background: #f0f9ff; padding: 12px; border-radius: 6px; margin: 15px 0; border-left: 3px solid #3b82f6;'>\n",
-    "                    <strong style='color: #1e40af;'>Data Collection Notice:</strong><br>\n",
-    "                    <span style='color: #374151; font-size: 14px;'>\n",
-    "                        This app automatically logs interaction data (ROI coordinates, parameters, and results) to a centralized Google Sheet for research purposes. \n",
-    "                        No personal information is collected. Data includes: location bounds, class selections, algorithm parameters, and model performance metrics.\n",
-    "                        <br><br>\n",
-    "                        <a href=\"{GOOGLE_SHEET_URL}\" target=\"_blank\" style=\"color: #2563eb; font-weight: 500;\">View collected data in Google Sheets</a>\n",
-    "                    </span>\n",
-    "                </div>\n",
+    "                \n",
     "                \n",
     "                <p style='margin: 0 0 10px 0; font-size: 16px; font-weight: 500; color: #1e40af;'>\n",
     "                    For example, you can compare:\n",
@@ -568,7 +560,8 @@
     "                <ul style='margin: 0 0 15px 20px; font-size: 15px; line-height: 1.5; color: #2563eb;'>\n",
     "                    <li style='color: #2563eb; font-weight: 500;'><strong>Built-up vs Water</strong></li>\n",
     "                    <li style='color: #2563eb; font-weight: 500;'><strong>Cropland vs Grassland</strong></li>\n",
-    "                    <li style='color: #2563eb; font-weight: 500;'><strong>Shrubland vs Tree cover</strong></li>\n",
+    "                    <li style='color: #2563eb; font-weight: 500;'><strong>Shrubland vs Tree cover </strong></li>\n",
+    "                     <li style='color: #2563eb; font-weight: 500;'><strong>or select among 11 land cover types (55 possible combinations) </strong></li>\n",
     "                </ul>\n",
     "                \n",
     "                <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6; color: #1e293b;'>\n",
@@ -1582,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1596,7 +1589,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3175794abc34778828587ad09b48b22",
+       "model_id": "01cab0c0edf441cc95615b29d9a1b2ac",
        "version_major": 2,
        "version_minor": 0
       },
