--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,8 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -567,26 +570,28 @@
     "                <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6; color: #1e293b;'>\n",
     "                    and determine which embeddings play the most significant role in those pairwise distinctions. To support \n",
     "                    your analysis, the app provides four classifier options: Random Forest, XGBoost, Gradient Boosting, and LightGBM, \n",
-    "                    plus other control parameters. All user interactions will be recorded as part of an effort to better interpret \n",
-    "                    these embeddings and translate them into more intuitive, lower-dimensional representations tailored for specific applications.\n",
-    "                    After a few exercises, you'll gain intuitive insights into how powerful this foundation model can be for your machine learning tasks\n",
+    "                    plus other control parameters. You'll gain intuitive insights into how powerful this foundation model can be for your machine learning tasks\n",
     "                    in geospatial science.\n",
     "                </p>\n",
     "                \n",
     "                <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6; color: #1e293b;'>\n",
-    "                    <strong style='color: #7c2d12;'>Research Data Collection:</strong> Each time you run a classification, \n",
-    "                    your interaction data (region coordinates, class selections, algorithm parameters, and model performance, etc) \n",
-    "                    will be automatically stored for research purposes. The main objective is to identify whether robust \n",
-    "                    relationships exist between pairwise land cover classifications and specific embedding patterns at a \n",
-    "                    global scale, enabling us to understand which subset of embeddings capture specific ecological or \n",
-    "                    geographical features.\n",
+    "                    <strong style='color: #7c2d12;'>🌍 Research Data Collection:</strong> Each time you run a classification, \n",
+    "                    your interaction data (region coordinates, class selections, algorithm parameters, and model performance) \n",
+    "                    will be automatically stored for research purposes from a Citizen Science perspective. Our main objectives are twofolded: 1) to \n",
+    "                    create a large crowdsourced dataset to identify relationships between land cover types and specific embedding \n",
+    "                    patterns; and 2) help people around the world to get familiar with Google Alpha Earth through intuitive and understandable classification tasks.\n",
     "                </p>\n",
     "                \n",
     "                <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6; color: #1e293b;'>                    \n",
-    "                    To run this app with all features (not just demo), you need to first create a free Google Earth Engine account at \n",
-    "                    <a href=\"https://signup.earthengine.google.com\" target=\"_blank\" style=\"color: #2563eb; text-decoration: underline; font-weight: 500;\">signup.earthengine.google.com</a>. After that, you must create and register a Google Cloud Project under the non-commercial \n",
+    "                    🌍 To run this app with all features (not just demo), you need to first create a free Google Earth Engine account at \n",
+    "                    <a href=\"https://signup.earthengine.google.com\" target=\"_blank\" style=\"color: #2563eb; text-decoration: underline; font-weight: 500;\">signup.earthengine.google.com</a>. You must create and register a Google Cloud Project under the non-commercial \n",
     "                    option, which automatically enables the Earth Engine API. Once your account and project are set up, the app can connect \n",
-    "                    securely to Earth Engine, moving beyond demo mode and giving you full access to datasets and geospatial analysis tools.                    \n",
+    "                    securely to Earth Engine, moving beyond demo mode and giving you full access to datasets and geospatial analysis tools.                   \n",
+    "                </p>\n",
+    "                \n",
+    "                <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6; color: #1e293b;'>                    \n",
+    "                    🌍 You can watch a tutorial video here more detailed explanation before running the app\n",
+    "                    <a href=\"https://www.youtube.com/watch?v=wUi-kSeEEYk\" target=\"_blank\" style=\"color: #2563eb; text-decoration: underline; font-weight: 500;\">https://www.youtube.com/watch?v=wUi-kSeEEYk</a>.                   \n",
     "                </p>\n",
     "                \n",
     "                <div style='background: #e0f2fe; padding: 15px; border-radius: 8px; border-left: 4px solid #0288d1;'>\n",
@@ -1575,13 +1580,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 277
     },
     "id": "V35szhG11dYO",
+    "jupyter": {
+     "source_hidden": true
+    },
     "outputId": "fa1b62bc-68f6-49b0-cd89-256669b9ac49",
     "tags": []
    },
@@ -1589,7 +1597,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01cab0c0edf441cc95615b29d9a1b2ac",
+       "model_id": "433a9feded9649449c256ac7cfd06b67",
        "version_major": 2,
        "version_minor": 0
       },
