--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -4,9 +4,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -580,17 +577,17 @@
     "                    will be automatically stored for research purposes from a Citizen Science perspective. Our main objectives are twofolded: 1) to \n",
     "                    create a large crowdsourced dataset to identify relationships between land cover types and specific embedding \n",
     "                    patterns; and 2) help people around the world to get familiar with Google Alpha Earth through intuitive and understandable classification tasks.\n",
+    "                    No personal information will be registered, all interactions are 100% anonymous.\n",
     "                </p>\n",
     "                \n",
     "                <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6; color: #1e293b;'>                    \n",
-    "                    🌍 To run this app with all features (not just demo), you need to first create a free Google Earth Engine account at \n",
-    "                    <a href=\"https://signup.earthengine.google.com\" target=\"_blank\" style=\"color: #2563eb; text-decoration: underline; font-weight: 500;\">signup.earthengine.google.com</a>. You must create and register a Google Cloud Project under the non-commercial \n",
+    "                    🌍 To run this app with all features (not just demo),  You must create and register a Google Cloud Project under the non-commercial \n",
     "                    option, which automatically enables the Earth Engine API. Once your account and project are set up, the app can connect \n",
     "                    securely to Earth Engine, moving beyond demo mode and giving you full access to datasets and geospatial analysis tools.                   \n",
     "                </p>\n",
     "                \n",
     "                <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6; color: #1e293b;'>                    \n",
-    "                    🌍 You can watch a tutorial video here more detailed explanation before running the app\n",
+    "                    🌍 Watch a tutorial video here for detailed explanation before running the app\n",
     "                    <a href=\"https://www.youtube.com/watch?v=wUi-kSeEEYk\" target=\"_blank\" style=\"color: #2563eb; text-decoration: underline; font-weight: 500;\">https://www.youtube.com/watch?v=wUi-kSeEEYk</a>.                   \n",
     "                </p>\n",
     "                \n",
@@ -1587,9 +1584,6 @@
      "height": 277
     },
     "id": "V35szhG11dYO",
-    "jupyter": {
-     "source_hidden": true
-    },
     "outputId": "fa1b62bc-68f6-49b0-cd89-256669b9ac49",
     "tags": []
    },
