--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {
     "tags": []
    },
@@ -343,13 +343,15 @@
     "        self.ESA_CLASSES = {\n",
     "            10: \"Tree cover\", 20: \"Shrubland\", 30: \"Grassland\", 40: \"Cropland\",\n",
     "            50: \"Built-up\", 60: \"Bare/sparse\", 70: \"Snow/ice\", 80: \"Water\",\n",
-    "            90: \"Herb. wetland\", 95: \"Mangroves\", 100: \"Moss/lichen\"\n",
+    "            90: \"Herb. wetland\", 95: \"Mangroves\", 100: \"Moss/lichen\",\n",
+    "            999: \"All other classes\"\n",
     "        }\n",
     "\n",
     "        self.CLASS_COLORS = {\n",
     "            10: '#006400', 20: '#ffbb22', 30: '#ffff4c', 40: '#f096ff',\n",
     "            50: '#fa0000', 60: '#b4b4b4', 70: '#f0f0f0', 80: '#0064c8',\n",
-    "            90: '#0096a0', 95: '#00cf75', 100: '#fae6a0'\n",
+    "            90: '#0096a0', 95: '#00cf75', 100: '#fae6a0',\n",
+    "            999: '#808080'\n",
     "        }\n",
     "        \n",
     "        # Countries list for dropdown\n",
@@ -437,7 +439,7 @@
     "            else:\n",
     "                base_row_data.extend(['', 0])\n",
     "        \n",
-    "        # Add all 64 embedding names and importances (128 columns)\n",
+    "        # Add all 64 embedding names and importances (128)       \n",
     "        all_embedding_data = []\n",
     "        if 'all_embeddings' in results_data:\n",
     "            for embedding_name, importance in results_data['all_embeddings']:\n",
@@ -522,6 +524,78 @@
     "            \n",
     "        except Exception as e:\n",
     "            print(f\"Failed to update feedback in Google Sheets: {str(e)}\")\n",
+    "\n",
+    "    def ee_pairwise_sample_with_others(self, class_a, class_b, *, year, region, scale_m, n_per_class, seed):\n",
+    "        \"\"\"Sample data from Earth Engine - handles 'all other classes' option\"\"\"\n",
+    "        emb, bands, emb_mask, esa = load_stack(year)\n",
+    "        \n",
+    "        # All valid ESA classes\n",
+    "        all_esa_classes = [10, 20, 30, 40, 50, 60, 70, 80, 90, 95, 100]\n",
+    "        \n",
+    "        # Handle \"All other classes\" scenarios\n",
+    "        if class_a == 999 and class_b == 999:\n",
+    "            raise ValueError(\"Both classes cannot be 'All other classes'\")\n",
+    "        \n",
+    "        elif class_a == 999:\n",
+    "            # Class A = \"all others\", Class B = specific\n",
+    "            specific_class = class_b\n",
+    "            other_classes = [c for c in all_esa_classes if c != specific_class]\n",
+    "            \n",
+    "            # Create combined mask for all \"other\" classes\n",
+    "            others_mask = esa.eq(other_classes[0])\n",
+    "            for other_class in other_classes[1:]:\n",
+    "                others_mask = others_mask.Or(esa.eq(other_class))\n",
+    "            \n",
+    "            specific_mask = esa.eq(specific_class)\n",
+    "            pair_mask = others_mask.Or(specific_mask)\n",
+    "            \n",
+    "            # Relabel: all \"others\" become 999, specific stays as is\n",
+    "            relabeled_esa = esa.where(others_mask, 999)\n",
+    "            \n",
+    "        elif class_b == 999:\n",
+    "            # Class B = \"all others\", Class A = specific\n",
+    "            specific_class = class_a\n",
+    "            other_classes = [c for c in all_esa_classes if c != specific_class]\n",
+    "            \n",
+    "            # Create combined mask for all \"other\" classes\n",
+    "            others_mask = esa.eq(other_classes[0])\n",
+    "            for other_class in other_classes[1:]:\n",
+    "                others_mask = others_mask.Or(esa.eq(other_class))\n",
+    "            \n",
+    "            specific_mask = esa.eq(specific_class)\n",
+    "            pair_mask = others_mask.Or(specific_mask)\n",
+    "            \n",
+    "            # Relabel: all \"others\" become 999, specific stays as is\n",
+    "            relabeled_esa = esa.where(others_mask, 999)\n",
+    "            \n",
+    "        else:\n",
+    "            # Normal case: both classes are specific\n",
+    "            pair_mask = esa.eq(class_a).Or(esa.eq(class_b))\n",
+    "            relabeled_esa = esa\n",
+    "\n",
+    "        # Create stack with processed labels\n",
+    "        stack = (emb.updateMask(emb_mask).updateMask(pair_mask)\n",
+    "                ).addBands(relabeled_esa.updateMask(emb_mask).updateMask(pair_mask).rename('label'))\n",
+    "\n",
+    "        pair_fc = stack.stratifiedSample(\n",
+    "            numPoints=n_per_class * 2,\n",
+    "            classBand='label',\n",
+    "            region=region,\n",
+    "            scale=scale_m,\n",
+    "            classValues=[class_a, class_b],\n",
+    "            classPoints=[n_per_class, n_per_class],\n",
+    "            seed=seed,\n",
+    "            geometries=True\n",
+    "        ).select(bands.cat(ee.List(['label'])))\n",
+    "\n",
+    "        size = pair_fc.size().getInfo()\n",
+    "        hist = pair_fc.aggregate_histogram('label').getInfo()\n",
+    "\n",
+    "        props = bands.cat(ee.List(['label']))\n",
+    "        attr_fc = pair_fc.map(lambda f: ee.Feature(None, f.toDictionary(props)))\n",
+    "        feats = attr_fc.getInfo()['features'] if size else []\n",
+    "        df = pd.DataFrame([f['properties'] for f in feats]) if feats else pd.DataFrame(columns=[*bands.getInfo(), 'label'])\n",
+    "        return df, list(bands.getInfo()), hist, size, pair_fc\n",
     "\n",
     "    def create_widgets(self):\n",
     "        \"\"\"Create all UI widgets with interactive map for region selection\"\"\"\n",
@@ -659,8 +733,6 @@
     "            style={'description_width': '170px'},\n",
     "            layout=widgets.Layout(width='500px')\n",
     "        )\n",
-    "\n",
-    "        \n",
     "\n",
     "        # Region selection with interactive map\n",
     "        self.region_title = widgets.HTML(\n",
@@ -916,19 +988,36 @@
     "    def update_class_comparison(self, change):\n",
     "        \"\"\"Update class comparison display with better styling\"\"\"\n",
     "        try:\n",
+    "            if self.class_a.value == 999 and self.class_b.value == 999:\n",
+    "                self.class_comparison.value = \"\"\"\n",
+    "                <div style='background: #fee2e2; padding: 12px; border-radius: 8px; margin: 10px 0;\n",
+    "                            border-left: 4px solid #ef4444; color: #1e293b; font-size: 14px;'>\n",
+    "                    <b style='color: #dc2626; font-size: 15px;'>Invalid Selection:</b><br>\n",
+    "                    <span style='color: #dc2626; font-weight: 500;'>\n",
+    "                        Both classes cannot be \"All other classes\". Please select one specific class.\n",
+    "                    </span>\n",
+    "                </div>\n",
+    "                \"\"\"\n",
+    "                return\n",
+    "                \n",
     "            class_a_name = self.ESA_CLASSES[self.class_a.value]\n",
     "            class_b_name = self.ESA_CLASSES[self.class_b.value]\n",
     "\n",
-    "            difficulty = self.calculate_class_similarity(self.class_a.value, self.class_b.value)\n",
-    "            if difficulty > 0.6:\n",
-    "                diff_label = \"Hard\"\n",
-    "                diff_color = \"#dc2626\"\n",
-    "            elif difficulty > 0.4:\n",
+    "            if self.class_a.value == 999 or self.class_b.value == 999:\n",
+    "                difficulty = 0.5\n",
     "                diff_label = \"Medium\"\n",
     "                diff_color = \"#d97706\"\n",
     "            else:\n",
-    "                diff_label = \"Easy\"\n",
-    "                diff_color = \"#059669\"\n",
+    "                difficulty = self.calculate_class_similarity(self.class_a.value, self.class_b.value)\n",
+    "                if difficulty > 0.6:\n",
+    "                    diff_label = \"Hard\"\n",
+    "                    diff_color = \"#dc2626\"\n",
+    "                elif difficulty > 0.4:\n",
+    "                    diff_label = \"Medium\"\n",
+    "                    diff_color = \"#d97706\"\n",
+    "                else:\n",
+    "                    diff_label = \"Easy\"\n",
+    "                    diff_color = \"#059669\"\n",
     "\n",
     "            self.class_comparison.value = f\"\"\"\n",
     "            <div style='background: #e8f5e8; padding: 12px; border-radius: 8px; margin: 10px 0;\n",
@@ -1172,6 +1261,18 @@
     "                print(\"Earth Engine authentication required for satellite data analysis\")\n",
     "                return\n",
     "\n",
+    "            if self.class_a.value == 999 and self.class_b.value == 999:\n",
+    "                self.progress.layout.visibility = 'hidden'\n",
+    "                self.status.value = \"\"\"\n",
+    "                <div style='background: #fee2e2; padding: 12px; border-radius: 8px; margin: 10px 0;\n",
+    "                            border-left: 4px solid #ef4444; text-align: center;'>\n",
+    "                    <span style='color: #dc2626; font-weight: bold; font-size: 16px;'>\n",
+    "                        Both classes cannot be \"All other classes\"! Select one specific class.\n",
+    "                    </span>\n",
+    "                </div>\n",
+    "                \"\"\"\n",
+    "                return\n",
+    "\n",
     "            # Show progress\n",
     "            self.progress.layout.visibility = 'visible'\n",
     "            self.progress.value = 10\n",
@@ -1207,7 +1308,7 @@
     "                self.progress.value = 30\n",
     "                self.progress.description = 'Loading satellite data...'\n",
     "\n",
-    "                df, EMBED_BANDS, hist, size, pair_fc = self.ee_pairwise_sample_global(\n",
+    "                df, EMBED_BANDS, hist, size, pair_fc = self.ee_pairwise_sample_with_others(\n",
     "                    self.class_a.value, self.class_b.value,\n",
     "                    year=2020,\n",
     "                    region=region,\n",
@@ -1278,8 +1379,45 @@
     "                        'rank': i + 1\n",
     "                    })\n",
     "\n",
-    "                classA_img = esa_vis.eq(self.class_a.value).updateMask(esa_vis.eq(self.class_a.value)).updateMask(emb_mask_vis).clip(region)\n",
-    "                classB_img = esa_vis.eq(self.class_b.value).updateMask(esa_vis.eq(self.class_b.value)).updateMask(emb_mask_vis).clip(region)\n",
+    "                # Apply the same relabeling logic for visualization\n",
+    "                if self.class_a.value == 999 or self.class_b.value == 999:\n",
+    "                    # We need to create relabeled ESA for visualization too\n",
+    "                    all_esa_classes = [10, 20, 30, 40, 50, 60, 70, 80, 90, 95, 100]\n",
+    "                    \n",
+    "                    if self.class_a.value == 999:\n",
+    "                        # Class A = \"all others\", Class B = specific\n",
+    "                        specific_class = self.class_b.value\n",
+    "                        other_classes = [c for c in all_esa_classes if c != specific_class]\n",
+    "                        \n",
+    "                        # Create combined mask for all \"other\" classes\n",
+    "                        others_mask_vis = esa_vis.eq(other_classes[0])\n",
+    "                        for other_class in other_classes[1:]:\n",
+    "                            others_mask_vis = others_mask_vis.Or(esa_vis.eq(other_class))\n",
+    "                        \n",
+    "                        # Relabel ESA for visualization\n",
+    "                        relabeled_esa_vis = esa_vis.where(others_mask_vis, 999)\n",
+    "                        \n",
+    "                    elif self.class_b.value == 999:\n",
+    "                        # Class B = \"all others\", Class A = specific  \n",
+    "                        specific_class = self.class_a.value\n",
+    "                        other_classes = [c for c in all_esa_classes if c != specific_class]\n",
+    "                        \n",
+    "                        # Create combined mask for all \"other\" classes\n",
+    "                        others_mask_vis = esa_vis.eq(other_classes[0])\n",
+    "                        for other_class in other_classes[1:]:\n",
+    "                            others_mask_vis = others_mask_vis.Or(esa_vis.eq(other_class))\n",
+    "                        \n",
+    "                        # Relabel ESA for visualization\n",
+    "                        relabeled_esa_vis = esa_vis.where(others_mask_vis, 999)\n",
+    "                    \n",
+    "                    # Use relabeled ESA for creating class images\n",
+    "                    classA_img = relabeled_esa_vis.eq(self.class_a.value).updateMask(relabeled_esa_vis.eq(self.class_a.value)).updateMask(emb_mask_vis).clip(region)\n",
+    "                    classB_img = relabeled_esa_vis.eq(self.class_b.value).updateMask(relabeled_esa_vis.eq(self.class_b.value)).updateMask(emb_mask_vis).clip(region)\n",
+    "                    \n",
+    "                else:\n",
+    "                    # Normal case: both classes are specific, use original ESA\n",
+    "                    classA_img = esa_vis.eq(self.class_a.value).updateMask(esa_vis.eq(self.class_a.value)).updateMask(emb_mask_vis).clip(region)\n",
+    "                    classB_img = esa_vis.eq(self.class_b.value).updateMask(esa_vis.eq(self.class_b.value)).updateMask(emb_mask_vis).clip(region)\n",
     "\n",
     "                m = folium.Map(location=[center_lat, center_lon], zoom_start=8, control_scale=True)\n",
     "\n",
@@ -1478,7 +1616,7 @@
     "                            <strong>Download generation failed:</strong> {str(e)}\n",
     "                        </div>\n",
     "                        \"\"\"\n",
-    "                \n",
+    "\n",
     "                download_button.on_click(download_embeddings)\n",
     "                \n",
     "                display(widgets.VBox([\n",
@@ -1577,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1591,7 +1729,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "433a9feded9649449c256ac7cfd06b67",
+       "model_id": "a000a5fbea3a4cc2904a058e0e7dc58c",
        "version_major": 2,
        "version_minor": 0
       },
