--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -4,6 +4,9 @@
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -1722,6 +1725,9 @@
      "height": 277
     },
     "id": "V35szhG11dYO",
+    "jupyter": {
+     "source_hidden": true
+    },
     "outputId": "fa1b62bc-68f6-49b0-cd89-256669b9ac49",
     "tags": []
    },
