--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ON THE TOP MENU CLICK Run and Run All Cells"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {
