--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -4,16 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ON THE TOP MENU CLICK Run and Run All Cells"
+    "<h1 style=\"text-align:center;\"><b>On the top Menu click Run and Run All Cells</b></h1>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 82,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -24,7 +21,8 @@
       "Authenticating with Google Earth Engine...\n",
       "Earth Engine already initialized!\n",
       "Welcome to AlphaEarth Land Cover Classifier!\n",
-      "Loading app...\n"
+      "Loading app...\n",
+      "🆘 If you have problems to start, Watch this tutorial video https://www.youtube.com/watch?v=wUi-kSeEEYk\n"
      ]
     }
    ],
@@ -113,6 +111,7 @@
     "\n",
     "print(\"Welcome to AlphaEarth Land Cover Classifier!\")\n",
     "print(\"Loading app...\")\n",
+    "print(\"🆘 Watch this tutorial video https://www.youtube.com/watch?v=wUi-kSeEEYk\")\n",
     "\n",
     "# ===============================================\n",
     "# ORIGINAL WORKING FUNCTIONS\n",
@@ -1725,16 +1724,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 84,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 277
     },
     "id": "V35szhG11dYO",
-    "jupyter": {
-     "source_hidden": true
-    },
     "outputId": "fa1b62bc-68f6-49b0-cd89-256669b9ac49",
     "tags": []
    },
@@ -1742,7 +1738,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a000a5fbea3a4cc2904a058e0e7dc58c",
+       "model_id": "725d7a907d5942f0a7536e25b2512737",
        "version_major": 2,
        "version_minor": 0
       },
