--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -4,13 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"text-align:center;\"><b>On the top Menu click Run and Run All Cells</b></h1>\n"
+    "<h1 style=\"text-align:center; color:blue; font-size:32px;\">\n",
+    "  <b>On the top Menu click \"Run\" and then \"Run All Cells\"</b>\n",
+    "</h1>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "<h2 style=\"text-align:center; font-size:26px;\">\n",
+    "  📺 Watch <a href=\"https://www.youtube.com/watch?v=wUi-kSeEEYk\" target=\"_blank\">Tutorial Video</a>\n",
+    "</h2>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 99,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -21,8 +37,7 @@
       "Authenticating with Google Earth Engine...\n",
       "Earth Engine already initialized!\n",
       "Welcome to AlphaEarth Land Cover Classifier!\n",
-      "Loading app...\n",
-      "🆘 If you have problems to start, Watch this tutorial video https://www.youtube.com/watch?v=wUi-kSeEEYk\n"
+      "Loading app...\n"
      ]
     }
    ],
@@ -111,7 +126,6 @@
     "\n",
     "print(\"Welcome to AlphaEarth Land Cover Classifier!\")\n",
     "print(\"Loading app...\")\n",
-    "print(\"🆘 Watch this tutorial video https://www.youtube.com/watch?v=wUi-kSeEEYk\")\n",
     "\n",
     "# ===============================================\n",
     "# ORIGINAL WORKING FUNCTIONS\n",
@@ -1724,13 +1738,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 100,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 277
     },
     "id": "V35szhG11dYO",
+    "jupyter": {
+     "source_hidden": true
+    },
     "outputId": "fa1b62bc-68f6-49b0-cd89-256669b9ac49",
     "tags": []
    },
@@ -1738,7 +1755,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "725d7a907d5942f0a7536e25b2512737",
+       "model_id": "39e92e7b57a14dd99c89cc51cdedf1cb",
        "version_major": 2,
        "version_minor": 0
       },
