--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -16,17 +16,14 @@
    },
    "source": [
     "<h2 style=\"text-align:center; font-size:26px;\">\n",
-    "  📺 Watch <a href=\"https://www.youtube.com/watch?v=wUi-kSeEEYk\" target=\"_blank\">Tutorial Video</a>\n",
+    "  📺 Watch <a href=\"https://www.youtube.com/watch?v=lC2y_dAHKvM\" target=\"_blank\">Tutorial Video</a>\n",
     "</h2>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -642,7 +639,7 @@
     "                        border-left: 4px solid #4f46e5; color: #1e293b;'>\n",
     "                <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6;'>\n",
     "                    <span style='color: #dc2626; font-weight: bold;'>Welcome, please read before running the App:</span> \n",
-    "                    this app uses the <strong style='color: #2563eb;'>AlphaEarth AI-Foundation Model</strong> for Land Cover Classification tasks.\n",
+    "                    this app uses the <strong><a href=\"https://deepmind.google/discover/blog/alphaearth-foundations-helps-map-our-planet-in-unprecedented-detail/\" target=\"_blank\" style='color: #2563eb; text-decoration: none;'>Google AlphaEarth AI-Foundation Model</a></strong> for Land Cover Classification tasks.\n",
     "                    You will interact face to face with the 64 embeddings of this model (year 2020) to classify \n",
     "                    land cover types using validated label data from the Ecological Society of America (2020). This is a unique opportunity \n",
     "                    to explore how abstract embeddings from a cutting-edge Google DeepMind foundation model capture ecological patterns \n",
@@ -685,7 +682,7 @@
     "                \n",
     "                <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6; color: #1e293b;'>                    \n",
     "                    🌍 Watch a tutorial video here for detailed explanation before running the app\n",
-    "                    <a href=\"https://www.youtube.com/watch?v=wUi-kSeEEYk\" target=\"_blank\" style=\"color: #2563eb; text-decoration: underline; font-weight: 500;\">https://www.youtube.com/watch?v=wUi-kSeEEYk</a>.                   \n",
+    "                    <a href=\"https://www.youtube.com/watch?v=lC2y_dAHKvM\" target=\"_blank\" style=\"color: #2563eb; text-decoration: underline; font-weight: 500;\">https://www.youtube.com/watch?v=lC2y_dAHKvM</a>.                   \n",
     "                </p>\n",
     "                \n",
     "                <div style='background: #e0f2fe; padding: 15px; border-radius: 8px; border-left: 4px solid #0288d1;'>\n",
@@ -1738,16 +1735,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 277
     },
     "id": "V35szhG11dYO",
-    "jupyter": {
-     "source_hidden": true
-    },
     "outputId": "fa1b62bc-68f6-49b0-cd89-256669b9ac49",
     "tags": []
    },
@@ -1755,7 +1749,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39e92e7b57a14dd99c89cc51cdedf1cb",
+       "model_id": "60807f50efb446c1a3d006d345dfdace",
        "version_major": 2,
        "version_minor": 0
       },
