--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -24,6 +24,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
