--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -24,7 +24,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     },
     "tags": []
@@ -1744,7 +1746,12 @@
      "base_uri": "https://localhost:8080/",
      "height": 277
     },
+    "collapsed": true,
     "id": "V35szhG11dYO",
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
     "outputId": "fa1b62bc-68f6-49b0-cd89-256669b9ac49",
     "tags": []
    },
