--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -22,8 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -1735,7 +1738,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "62e9e162e37f4d44b45c7ed58e896c6f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='\\n        <style>\\n            .widget-html-content {\\n                color: #1e29…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# ===============================================\n",
+    "# 🚀 LAUNCH THE APP\n",
+    "# ===============================================\n",
+    "app = AlphaEarthApp(PROJECT_ID)\n",
+    "app.display_app()    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1752,7 +1788,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "704bd9037aca44498b4b673996acde4a",
+       "model_id": "e0c8deeb18ce4111ade395da05f03ca3",
        "version_major": 2,
        "version_minor": 0
       },
