--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -22,25 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Authenticating with Google Earth Engine...\n",
-      "Earth Engine already initialized!\n",
-      "Welcome to AlphaEarth Land Cover Classifier!\n",
-      "Loading app...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ee\n",
     "import numpy as np\n",
@@ -1738,68 +1729,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62e9e162e37f4d44b45c7ed58e896c6f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='\\n        <style>\\n            .widget-html-content {\\n                color: #1e29…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# ===============================================\n",
-    "# 🚀 LAUNCH THE APP\n",
-    "# ===============================================\n",
-    "app = AlphaEarthApp(PROJECT_ID)\n",
-    "app.display_app()    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 277
-    },
-    "id": "V35szhG11dYO",
-    "jupyter": {
-     "source_hidden": true
-    },
-    "outputId": "fa1b62bc-68f6-49b0-cd89-256669b9ac49",
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0c8deeb18ce4111ade395da05f03ca3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='\\n        <style>\\n            .widget-html-content {\\n                color: #1e29…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ===============================================\n",
     "# 🚀 LAUNCH THE APP\n",
